--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <header>
       <nav class="container">
         <h1>DSMovie</h1>
-        <a href="https://github.com/devsuperior">/devsuperior</a>
+        <div class="dsmovie-contatct-container">
+          <img src="img/github.svg" alt="GitHub" />
+          <a href="https://github.com/devsuperior">/devsuperior</a>
+        </div>
       </nav>
     </header>
   </body>
