--- a/index.html
+++ b/index.html
@@ -23,5 +23,20 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section id="dsmovie-card-list" class="container">
+        <div class="dsmovie-card">
+          <img
+            src="https://www.themoviedb.org/t/p/w220_and_h330_face/jWnbuXuzMIl3FDIs0qY9ZdDPxCl.jpg"
+            alt="Thor"
+          />
+          <div class="dsmovie-card-description">
+            <h3>Thor</h3>
+            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
