Listagem de cards

--- a/index.html
+++ b/index.html
@@ -26,14 +26,150 @@
 
     <main>
       <section id="dsmovie-card-list" class="container">
-        <div class="dsmovie-card">
-          <img
-            src="https://www.themoviedb.org/t/p/w220_and_h330_face/jWnbuXuzMIl3FDIs0qY9ZdDPxCl.jpg"
-            alt="Thor"
-          />
-          <div class="dsmovie-card-description">
-            <h3>Thor</h3>
-            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+        <div class="row">
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/jWnbuXuzMIl3FDIs0qY9ZdDPxCl.jpg"
+                alt="Thor"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Thor</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/zXVULhR2af58DyU3MUIkMFVdkPq.jpg"
+                alt="Homem de Ferro"
+              />
+              <div class="dsmovie-card-description">
+                <h3>HOMEM DE FERRO</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/sUGYYLTtE4k5T1DBki033J6qAwY.jpg"
+                alt="Guardiões da Galáxia"
+              />
+              <div class="dsmovie-card-description">
+                <h3>GUARDIÕES DA GALÁXIA</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/tkc7AVyUoG9VEeDvukN0TVqa24C.jpg"
+                alt="Cavaleiro da Lua"
+              />
+              <div class="dsmovie-card-description">
+                <h3>CAVALEIRO DA LUA</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/tt37OtTjsrCokPnHx0gqamOYhPo.jpg"
+                alt="Demolidor"
+              />
+              <div class="dsmovie-card-description">
+                <h3>DEMOLIDOR</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/h7pPScuwv81uXyQ6NwxCmM5AsrD.jpg"
+                alt="Jessica Jones"
+              />
+              <div class="dsmovie-card-description">
+                <h3>JESSICA JONES</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/h2vB6OlhTA1jAazDXrr7PEgFPnV.jpg"
+                alt="O incrível Hulk"
+              />
+              <div class="dsmovie-card-description">
+                <h3>O INCRÍVEL HULK</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/p5PRiprJJ7mP5wwNyarHZWgPInD.jpg"
+                alt="Capitão América Primeiro Vingador"
+              />
+              <div class="dsmovie-card-description">
+                <h3>CAPITÃO AMÉRICA PRIMEIRO VINGADOR</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/yiLqv1gwBENjbqTAdPxW4LhX6aA.jpg"
+                alt="Homem-Formiga"
+              />
+              <div class="dsmovie-card-description">
+                <h3>HOMEM-FORMIGA</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/oW4odCdgmYHgKt6AVOqUasrMVjC.jpg"
+                alt="Doutor Estranho"
+              />
+              <div class="dsmovie-card-description">
+                <h3>DOUTOR ESTRANHO</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w220_and_h330_face/tCcWM9jjFOKvHUzPSHtEm6iAE8m.jpg"
+                alt="Pantera Negra"
+              />
+              <div class="dsmovie-card-description">
+                <h3>PANTERA NEGRA</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/original/38SVfXq1O45HKQ2RFUPvECz8Pse.jpg"
+                alt="Viúva Negra"
+              />
+              <div class="dsmovie-card-description">
+                <h3>VIÚVA NEGRA</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
