--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 alt="Thor"
               />
               <div class="dsmovie-card-description">
-                <h3>Thor</h3>
+                <h3>THOR</h3>
                 <a class="dsmovie-btn" href="form.html">Avaliar</a>
               </div>
             </div>
