Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>HOMEM DE FERRO</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -71,7 +82,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>GUARDIÕES DA GALÁXIA</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -83,7 +105,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>CAVALEIRO DA LUA</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -95,7 +128,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>DEMOLIDOR</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -107,7 +151,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>JESSICA JONES</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -119,7 +174,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>O INCRÍVEL HULK</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -131,7 +197,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>CAPITÃO AMÉRICA PRIMEIRO VINGADOR</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -143,7 +220,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>HOMEM-FORMIGA</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -155,7 +243,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>DOUTOR ESTRANHO</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -167,7 +266,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>PANTERA NEGRA</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -179,7 +289,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>VIÚVA NEGRA</h3>
-                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>3.8</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-half.svg" alt="star" />
+                    <img src="img/star-empty.svg" alt="star" />
+                  </div>
+                  <p>13 avaliações</p>
+                  <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
