--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
         <h1>DSMovie</h1>
         <div class="dsmovie-contatct-container">
           <img src="img/github.svg" alt="GitHub" />
-          <a href="https://github.com/devsuperior">/devsuperior</a>
+          <a href="https://github.com/vicentecljr">/vicentecljr</a>
         </div>
       </nav>
     </header>
 
     <main>
       <section id="dsmovie-card-list" class="container">
+        <div class="dsmovie-pagination-container">
+          <div class="dsmovie-pagination-box">
+            <button disabled>
+              <img src="img/arrow.svg" alt="Voltar" />
+            </button>
+            <p>1 de 23</p>
+            <button class="dsmovie-flip-horizontal">
+              <img src="img/arrow.svg" alt="Próxima" />
+            </button>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
